# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "connect4"
version = "0.2.0"
authors = ["Ivan Jukic <jukic@arrival.com>"]
edition = "2021"

[lib]
name = "connect4"
path = "./src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
